# objbot

./: README.rst  pyproject.toml  setup.py
objbot/: __init__.py  command.py  config.py  console.py  event.py  face.py  main.py  reactor.py  workdir.py
objbot/modules/: cmd.py  err.py  irc.py  log.py  mod.py  req.py  rss.py  tdo.py  thr.py  upt.py
objr/: client.py  reactor.py
objt/: errors.py
objw/: __init__.py  disk.py  find.py  workdir.py
objx/: __init__.py  object.py
objz/: __init__.py  client.py  command.py  config.py  console.py  default.py  event.py  log.py  main.py  utils.py
tests/: test_attrs.py  test_composite.py  test_github.py  test_hackernews.py  test_interface.py  test_mixin.py  test_object.py  test_opml.py
